modules/gdscript/tests/scripts/analyzer/errors/constant_name_shadows_builtin_type.gd
const Hector2 = 0

func test():
	pass
